[package]
name = "hex-map-editor"
version = "0.2.0"
edition = "2024"

[dependencies]
image = {version = "0.25.10", default-features = false, features = ["png", "jpeg"] }
serde = { version = "1", features = ["derive"] }

# Native distributions
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iced = { version = "0.14", features = ["canvas", "tokio"] }
rfd = "0.15"   # Native file dialogs (Linux/Windows/macOS)

# Web distribution
[target.'cfg(target_arch = "wasm32")'.dependencies]
iced = { version = "0.14", features = ["canvas", "wgpu"] }
web-sys = { version = "=0.3.77", features = ["Window", "Document", "HtmlElement"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# Windows cross-compilation target
[target.x86_64-pc-windows-gnu]
linker = "/usr/bin/x86_64-w64-mingw32-gcc"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[profile.release-wasm]
inherits = "release"
opt-level = "z"
